<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".fragments.CartFragment">

    <TextView
        android:id="@+id/textViewAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/address"
        android:textSize="?attr/textSizeMedium"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewRealAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/real_address_cafe"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewAddress" />

    <TextView
        android:id="@+id/textViewPickupTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/pick_up_soon"
        android:textSize="?attr/textSizeMedium"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewRealAddress" />

    <TextView
        android:id="@+id/textViewRealPickupTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/change_time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewPickupTime" />

    <TextView
        android:id="@+id/textViewClearCart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="end|center_vertical"
        android:text="@string/clear_cart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewRealPickupTime" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewProducts"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@+id/textViewTotalPrice"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewClearCart" />

    <TextView
        android:id="@+id/textViewTotalPrice"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:gravity="start|center_vertical"
        android:text="@string/total_price"
        android:textSize="?attr/textSizeMedium"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/buttonMakeOrder"
        app:layout_constraintEnd_toStartOf="@+id/textViewRealTotalPrice"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewRealTotalPrice"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="end|center_vertical"
        android:text="300 RUB"
        android:textSize="?attr/textSizeNormal"
        app:layout_constraintBottom_toBottomOf="@id/textViewTotalPrice"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textViewTotalPrice"
        app:layout_constraintTop_toTopOf="@id/textViewTotalPrice" />

    <Button
        android:id="@+id/buttonMakeOrder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pay_rest"
        app:layout_constraintBottom_toTopOf="@+id/buttonPayWithGoogle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonPayWithGoogle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Google Pay"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>