<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    tools:context=".fragments.AuthRegChooseFragment">

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stankin_food"
        android:textColor="@color/primary"
        android:textSize="?attr/textSizeHeader"
        app:layout_constraintBottom_toTopOf="@+id/buttonRegistration"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonRegistration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_registration"
        android:textSize="?attr/textSizeNormal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonAuthorization"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_authorization"
        android:textSize="?attr/textSizeNormal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonRegistration" />
</androidx.constraintlayout.widget.ConstraintLayout>